# Project_Sentinel_Facial-Authentication-System-for-2D-camera-in-Linux-

./: .gitignore  README.md  biometric_processor.py  camera_stream.py  config.ini  meson.build  pyproject.toml  requirements.txt  sentinel_client.py  sentinel_logger.py  sentinel_service.py  setup.sh  spoof_detector.py  uninstall.sh
models/: download_models.sh
packaging/: com.sentinel.policy  sentinel-backend.service  sentinel-biometric.spec  sentinel-gui  sentinel-gui.desktop
prototype_for_testing/: PROJECT_OVERVIEW.md  authenticate.py  biometric_processor.py  enroll.py  requirements.txt  sentinel-greeter.py  spoof_detector.py  stability_tracker.py
prototype_for_testing/tools/: onnx_healthcheck.py
src/: Application.vala  AuthView.vala  BackendService.vala  CameraPreview.vala  EnrollView.vala  IntrusionReviewDialog.vala  MainWindow.vala  SettingsView.vala  style.css
tools/: check_daemon.sh  convert_models.py  diag_daemon.py  test_rpc.py
