[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "project-sentinel"
version = "2.3.0"
description = "Face Authentication System for Linux"
readme = "README.md"
authors = [
    { name = "Project Sentinel Contributors" }
]
license = { text = "MIT" }
requires-python = ">=3.9"

dependencies = [
    "absl-py>=2.1.0",
    "attrs>=23.2.0",
    "cffi>=1.16.0",
    "coloredlogs>=15.0",
    "contourpy>=1.2.0",
    "cycler>=0.12.0",
    "flatbuffers>=24.3.25",
    "fonttools>=4.50.0",
    "humanfriendly>=10.0",
    "jax>=0.4.26",
    "jaxlib>=0.4.26",
    "kiwisolver>=1.4.5",
    "matplotlib>=3.8.0",
    "mediapipe>=0.10.11",
    "ml_dtypes>=0.4.0",
    "mpmath>=1.3.0",
    "numpy==1.26.4",
    "onnx==1.16.1",
    "onnxruntime==1.24.3",
    "opencv-contrib-python>=4.9.0",
    "opencv-python>=4.9.0",
    "openvino>=2025.3.0",
    "openvino-telemetry>=2025.2.0",
    "opt_einsum>=3.3.0",
    "packaging>=24.0",
    "pillow>=10.3.0",
    "protobuf>=4.25.3",
    "pycparser>=2.22",
    "pyparsing>=3.1.2",
    "python-dateutil>=2.9.0",
    "scipy>=1.11.0",
    "sentencepiece>=0.2.0",
    "six>=1.16.0",
    "sounddevice>=0.4.6",
    "sympy>=1.12"
]

[project.scripts]
sentinel-daemon = "sentinel_service:main"
